--- a/css/styles.css
+++ b/css/styles.css
@@ -579,12 +579,61 @@ img {
 .socials-footer {
   gap: 16px;
 }
+
 .socials-link-footer:hover,
 .socials-link-footer:focus {
   background-color: var(--valid-fields-colr);
   /* transition-property: background-color;
   transition-delay: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+}
+/* Subscribe section footer */
+.footer-subscription {
+  margin-left: 80px;
+}
+.footer-subscription-text {
+  margin-bottom: 16px;
+}
+.subscription-field {
+  display: flex;
+}
+.subscription-tag {
+  min-width: 264px;
+}
+.subscription-email {
+  width: 100%;
+  height: 40px;
+  padding: 8px 16px;
+  border-radius: 4px;
+  background-color: transparent;
+  border: 1px solid var(--hero-text-color);
+  color: var(--hero-text-color);
+}
+
+.subscription-email:focus-visible {
+  outline: transparent;
+}
+.subscribe-btn {
+  display: block;
+
+  margin-left: 24px;
+  padding: 8px 64px 8px 24px;
+
+  min-width: 165px;
+  height: 40px;
+  border: none;
+
+  border-radius: 4px;
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
+
+  position: relative;
+}
+
+.subscribe-btn-plane {
+  position: absolute;
+  fill: currentColor;
+  top: 8px;
+  right: 24px;
 }
 /* Modal window */
 .backdrop {
@@ -616,13 +665,17 @@ img {
   top: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  width: 408px;
+  min-width: 430px;
   min-height: 576px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 24px;
 
   background: var(--modal-background-color);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
+  transform-origin: top left;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -657,4 +710,105 @@ img {
 .modal-close-item {
   fill: currentColor;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+/* Modal input field */
+.modal-text {
+  font-weight: 500;
+  width: 100%;
+  margin-top: 72px;
+  margin-bottom: 16px;
+  color: var(--header-color);
+  text-align: center;
+}
+
+.modal-form-label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--subtle-text-color);
+}
+
+.modal-form-wrapper {
+  position: relative;
+  margin-bottom: 8px;
+
+  color: var(--header-color);
+}
+
+.modal-form-field,
+.modal-comment-field {
+  width: 100%;
+  height: 40px;
+  padding-left: 38px;
+  outline: transparent;
+  outline-offset: -1px;
+  border: 1px solid var(--modal-overlay-color);
+  border-radius: 4px;
+  color: 000000;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-field:focus,
+.modal-comment-field:focus {
+  outline: 1px solid var(--logo-color);
+}
+
+.modal-form-field:focus + .modal-form-icon {
+  fill: var(--logo-color);
+}
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: currentColor;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: none;
+}
+
+.modal-comment-field {
+  display: block;
+  height: 120px;
+  padding: 8px 16px;
+  resize: none;
+  margin-bottom: 16px;
+  color: var(--modal-overlay-color);
+  background: var(--modal-background-color);
+}
+.modal-form-agreement {
+  display: flex;
+  gap: 6px;
+  width: 100%;
+  margin-bottom: 24px;
+}
+
+.modal-agreement-text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+.modal-check-input {
+  appearance: none;
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 1px solid var(--modal-overlay-color);
+  border-radius: 2px;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("data:image/svg+xml,%3Csvg width='12' height='8' viewBox='0 0 10 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.44558 0.255056C8.61838 0.089653 8.84834 -0.00178848 9.08693 2.65108e-05C9.32551 0.0018415 9.55407 0.0967713 9.72436 0.264784C9.89466 0.432797 9.99337 0.660752 9.99968 0.900549C10.006 1.14034 9.91939 1.37323 9.75816 1.55005L4.86357 7.70436C4.7794 7.79551 4.67782 7.86865 4.5649 7.91942C4.45198 7.97018 4.33003 7.99754 4.20636 7.99984C4.08268 8.00214 3.95981 7.97935 3.8451 7.93282C3.73038 7.88629 3.62618 7.81698 3.53872 7.72903L0.292827 4.46564C0.202435 4.38096 0.129933 4.27884 0.0796475 4.16537C0.0293621 4.05191 0.00232279 3.92942 0.000143182 3.80522C-0.00203643 3.68102 0.0206883 3.55765 0.0669613 3.44248C0.113234 3.3273 0.182108 3.22267 0.269473 3.13483C0.356838 3.047 0.460905 2.97775 0.575465 2.93123C0.690026 2.88471 0.812734 2.86186 0.936267 2.86405C1.0598 2.86624 1.18163 2.89343 1.29449 2.94398C1.40734 2.99454 1.50892 3.06743 1.59315 3.15831L4.16189 5.73967L8.42227 0.28219C8.42994 0.272694 8.43813 0.263635 8.4468 0.255056H8.44558Z' fill='%23F4F4FD'/%3E%3C/svg%3E%0A");
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-check-input:checked {
+  background-color: var(--secondary-btn-color);
+  border: 1px solid var(--secondary-btn-color);
+}
+
+.modal-agreement-link {
+  color: var(--logo-color);
 }
